# python-monorepo-migration

./: README.md  pyproject.toml  requirements.txt
fastadd/: .gitignore
libs/common/: pyproject.toml  util.py
libs/common/common/: util.py
libs/fastadd/: .gitignore  setup.py
production/someservice/: pyproject.toml  someservice.py
someapi/api/: someservice.py
