[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "someservice"
version = "0.1.0"
authors = []
description = ""

[tool.poetry.dependencies]
python = "^3.9"

tqdm = "==4.10.0"
requests = "^2.31.0"
common = {path = "../../libs/common", develop = true}
fastadd = {path = "../../libs/fastadd", develop = true}